--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "lovable-tagger": "^1.1.9",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "oidc-client-ts": "^3.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.7.2",
+    "react-oidc-context": "^3.3.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
