--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.7.2",
+    "react-markdown": "^10.1.0",
     "react-oidc-context": "^3.3.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
